--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.cadebe</groupId>
+    <groupId>dev.cadebe</groupId>
     <artifactId>pets-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>pets-api</name>
